# sddm

./: .commit-template  .gitattributes  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTORS  COPYING-CC-BY-3.0  COPYING-CC-BY-SA-3.0  ChangeLog  INSTALL  INSTALL.md  LICENSE.CC-BY-3.0  PKGBUILD  README  README.md  TODO  sddm.1  sddm.conf  sddm.conf.cmake  sddm.service
components/: CMakeLists.txt
components/1.1/: Background.qml  Button.qml  Clock.qml  ComboBox.qml  ImageButton.qml  LayoutBox.qml  Menu.qml  PasswordBox.qml  PictureBox.qml  TextBox.qml  qmldir
components/2.0/: AutoCompletionBox.qml  Background.qml  Button.qml  Clock.qml  ComboBox.qml  ImageButton.qml  LayoutBox.qml  Menu.qml  PamConvHelper.qml  PasswordBox.qml  PasswordChange.qml  PictureBox.qml  ScrollBar.qml  TextBox.qml  qmldir
components/common/: TextConstants.qml  qmldir
data/: CMakeLists.txt  org.freedesktop.DisplayManager.conf  sddm.conf.in
data/faces/: README  root.face.icon
data/interfaces/: org.freedesktop.DisplayManager.Session.xml  org.freedesktop.DisplayManager.xml  org.freedesktop.Displaymanager.xml  org.freedesktop.locale1.xml  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Seat.xml  org.freedesktop.login1.Session.xml  org.freedesktop.login1.User.xml
data/keymaps/: CMakeLists.txt  compose.inc  compose.latin1  linux-keys-bare.inc  linux-with-alt-and-altgr.inc  qwerty-layout.inc
data/man/: CMakeLists.txt  sddm-greeter.rst.in  sddm-state.conf.rst.in  sddm.conf.rst.in  sddm.rst.in
data/protocols/: fullscreen-shell.xml
data/scripts/: Xsession  Xsetup  Xstop  wayland-session
data/themes/: CMakeLists.txt
data/translations/: CMakeLists.txt  ar.ts  bg.ts  bn.ts  ca.ts  cs.ts  da.ts  de.ts  es.ts  et.ts  eu.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hi_IN.ts  hsb.ts  hu.ts  ie.ts  is.ts  it.ts  ja.ts  ka.ts  kk.ts  ko.ts  lt.ts  lv.ts  nb.ts  nl.ts  nn.ts  oc.ts  pl.ts  pt_BR.ts  pt_PT.ts  ro.ts  ru.ts  sk.ts  sr.ts  sr@ijekavian.ts  (+7 more)
services/: CMakeLists.txt  debian.sddm-autologin.pam  debian.sddm-greeter.pam  debian.sddm.pam  fedora.sddm-autologin.pam  freebsd.sddm-autologin.pam  freebsd.sddm-greeter.pam  freebsd.sddm.pam  sddm-autologin-tally2.pam  sddm-autologin.pam  sddm-fingerprint.pam  sddm-greeter.pam  sddm-greeter.pam.in  sddm-plymouth.service.in  sddm-sysuser.conf.in  sddm-tmpfiles.conf.in  sddm.pam  sddm.service.in  sddm.systemd.in
src/: Application.cpp  Application.h  Authenticator.cpp  Authenticator.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Cookie.cpp  Cookie.h  DisplayManager.cpp  DisplayManager.h  LockFile.cpp  LockFile.h  Main.cpp  PowerManager.cpp  PowerManager.h  ScreenModel.h  SessionManager.cpp  SessionManager.h  SessionModel.cpp  SessionModel.h  ThemeConfig.cpp  ThemeConfig.h  ThemeMetadata.cpp  ThemeMetadata.h  UserModel.cpp  UserModel.h  Util.cpp  Util.h
src/auth/: Auth.cpp  Auth.h  AuthBase.h  AuthEnums.h  AuthMessages.h  AuthPrompt.cpp  AuthPrompt.h  AuthRequest.cpp  AuthRequest.h
src/common/: ConfigReader.cpp  ConfigReader.h  Configuration.cpp  Configuration.h  Constants.h.in  LogindDBusTypes.cpp  MessageHandler.h  Messages.h  PamTypes.cpp  PamTypes.h  QAuthMessages.h  SafeDataStream.cpp  SafeDataStream.h  Session.cpp  Session.h  SignalHandler.cpp  SignalHandler.h  SocketWriter.cpp  SocketWriter.h  ThemeConfig.cpp  ThemeConfig.h  ThemeMetadata.cpp  ThemeMetadata.h  Utils.cpp  Utils.h  VirtualTerminal.cpp  VirtualTerminal.h  VirtualTerminal_FreeBSD.cpp  XAuth.cpp  XAuth.h  XauthUtils.cpp  XauthUtils.h
src/compositor/: CMakeLists.txt  Main.cpp  compositor.qrc
src/daemon/: Authenticator.cpp  Authenticator.h  CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  DisplayManagerAdapter.cpp  DisplayManagerAdapter.h  DisplayServer.cpp  DisplayServer.h  Greeter.cpp  Greeter.h  LogindDBusTypes.cpp  LogindDBusTypes.h  PamService.cpp  PamService.h  Plymouth.cpp  Plymouth.h  PowerManager.cpp  PowerManager.h  Process.cpp  Process.h  Seat.cpp  Seat.h  SeatManager.cpp  SeatManager.h  Session.cpp  Session.h  SessionProcess.cpp  SessionProcess.h  SignalHandler.cpp  SignalHandler.h  SocketServer.cpp  SocketServer.h  Utils.cpp  Utils.h  VirtualTerminal.cpp  (+8 more)
src/display/: CMakeLists.txt  greeter.cpp  greeter.h  launcher.cpp  launcher.h  main.cpp  process.cpp  process.h  usersession.cpp  usersession.h  xorgserver.cpp  xorgserver.h
src/display-server/: DisplayServerApp.cpp  DisplayServerApp.h
src/greeter/: CMakeLists.txt  EmbeddedKeyboardBackend.cpp  EmbeddedKeyboardBackend.h  GreeterApp.cpp  GreeterApp.h  GreeterProxy.cpp  GreeterProxy.h  KeyboardBackend.cpp  KeyboardBackend.h  KeyboardLayout.cpp  KeyboardLayout.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardModel_p.h  PowerModel.cpp  PowerModel.h  ScreenModel.cpp  ScreenModel.h  SessionModel.cpp  SessionModel.h  ThemeConfig.cpp  ThemeConfig.h  ThemeMetadata.cpp  ThemeMetadata.h  UserModel.cpp  UserModel.h  WaylandIntegration.cpp  WaylandIntegration.h  WaylandKeyboardBackend.cpp  WaylandKeyboardBackend.h  XcbKeyboardBackend.cpp  XcbKeyboardBackend.h  theme-embedded.qrc  theme.qrc  waylandkeyboardbackend.cpp  waylandkeyboardbackend.h
src/helper/: Backend.cpp  Backend.h  CMakeLists.txt  HelperApp.cpp  HelperApp.h  HelperSignalHandler.h  HelperStartWayland.cpp  HelperStartX11User.cpp  QAuthApp.cpp  QAuthApp.h  QAuthSession.cpp  QAuthSession.h  UserSession.cpp  UserSession.h  WaylandSocketWatcher.cpp  WaylandSocketWatcher.h  waylandhelper.cpp  waylandhelper.h  waylandsocketwatcher.cpp  waylandsocketwatcher.h  xorguserhelper.cpp  xorguserhelper.h
src/helper-wayland/: CMakeLists.txt  main.cpp  waylandsocketwatcher.cpp  waylanduserhelper.cpp  waylanduserhelper.h
src/helper-x11/: CMakeLists.txt  main.cpp  xorguserhelper.cpp  xorguserhelper.h
src/pam_sddm/: CMakeLists.txt  pam_sddm.c
src/qauth/: QAuth.cpp  QAuth.h  QAuthPrompt.cpp  QAuthPrompt.h  QAuthRequest.cpp  (+1 more)
test/: CMakeLists.txt  ConfigurationTest.cpp  ConfigurationTest.h  QMLThemeConfigTest.cpp  QMLThemeConfigTest.qml  SessionTest.cpp  plasmawayland-dev.desktop  theme.conf
(+139 files in other folders)
